--- a/docs/content/docs/api/Submit_Feedback_feedback_post.mdx
+++ b/docs/content/docs/api/Submit_Feedback_feedback_post.mdx
@@ -15,4 +15,4 @@ _openapi:
 
 Submit feedback for a question-answer pair
 
-<APIPage document={"http://localhost:8000/openapi.json"} operations={[{"path":"/feedback","method":"post"}]} webhooks={[]} hasHead={false} />
+<APIPage document={"openapi.json"} operations={[{"path":"/feedback","method":"post"}]} webhooks={[]} hasHead={false} />
