--- a/docs/content/docs/api/Upload_Document_documents_upload_post.mdx
+++ b/docs/content/docs/api/Upload_Document_documents_upload_post.mdx
@@ -15,4 +15,4 @@ _openapi:
 
 Upload a document for processing
 
-<APIPage document={"http://localhost:8000/openapi.json"} operations={[{"path":"/documents/upload","method":"post"}]} webhooks={[]} hasHead={false} />
+<APIPage document={"openapi.json"} operations={[{"path":"/documents/upload","method":"post"}]} webhooks={[]} hasHead={false} />
