Update fumadocs content and generation script

--- a/docs/content/docs/api/Ask_Question_qa_ask_post.mdx
+++ b/docs/content/docs/api/Ask_Question_qa_ask_post.mdx
@@ -15,4 +15,4 @@ _openapi:
 
 Ask a question to an AI model based on uploaded documents
 
-<APIPage document={"openapi.json"} operations={[{"path":"/qa/ask","method":"post"}]} webhooks={[]} hasHead={false} />
+<APIPage document={"http://localhost:8000/openapi.json"} operations={[{"path":"/qa/ask","method":"post"}]} webhooks={[]} hasHead={false} />
