--- a/docs/content/docs/api/Delete_Document_documents__document_id__delete.mdx
+++ b/docs/content/docs/api/Delete_Document_documents__document_id__delete.mdx
@@ -15,4 +15,4 @@ _openapi:
 
 Delete a specific document
 
-<APIPage document={"openapi.json"} operations={[{"path":"/documents/{document_id}","method":"delete"}]} webhooks={[]} hasHead={false} />
+<APIPage document={"http://localhost:8000/openapi.json"} operations={[{"path":"/documents/{document_id}","method":"delete"}]} webhooks={[]} hasHead={false} />
