--- a/docs/content/docs/api/Delete_Feedback_feedback__session_id__delete.mdx
+++ b/docs/content/docs/api/Delete_Feedback_feedback__session_id__delete.mdx
@@ -15,4 +15,4 @@ _openapi:
 
 Delete feedback for a specific session
 
-<APIPage document={"openapi.json"} operations={[{"path":"/feedback/{session_id}","method":"delete"}]} webhooks={[]} hasHead={false} />
+<APIPage document={"http://localhost:8000/openapi.json"} operations={[{"path":"/feedback/{session_id}","method":"delete"}]} webhooks={[]} hasHead={false} />
