--- a/docs/content/docs/api/Get_Document_Status_documents__document_id__status_get.mdx
+++ b/docs/content/docs/api/Get_Document_Status_documents__document_id__status_get.mdx
@@ -15,4 +15,4 @@ _openapi:
 
 Get the processing status of a specific document
 
-<APIPage document={"openapi.json"} operations={[{"path":"/documents/{document_id}/status","method":"get"}]} webhooks={[]} hasHead={false} />
+<APIPage document={"http://localhost:8000/openapi.json"} operations={[{"path":"/documents/{document_id}/status","method":"get"}]} webhooks={[]} hasHead={false} />
