--- a/docs/content/docs/api/Get_Feedback_History_feedback_get.mdx
+++ b/docs/content/docs/api/Get_Feedback_History_feedback_get.mdx
@@ -15,4 +15,4 @@ _openapi:
 
 Get the history of feedback submissions
 
-<APIPage document={"openapi.json"} operations={[{"path":"/feedback","method":"get"}]} webhooks={[]} hasHead={false} />
+<APIPage document={"http://localhost:8000/openapi.json"} operations={[{"path":"/feedback","method":"get"}]} webhooks={[]} hasHead={false} />
