--- a/docs/content/docs/api/List_Documents_documents_get.mdx
+++ b/docs/content/docs/api/List_Documents_documents_get.mdx
@@ -15,4 +15,4 @@ _openapi:
 
 List all uploaded documents
 
-<APIPage document={"openapi.json"} operations={[{"path":"/documents","method":"get"}]} webhooks={[]} hasHead={false} />
+<APIPage document={"http://localhost:8000/openapi.json"} operations={[{"path":"/documents","method":"get"}]} webhooks={[]} hasHead={false} />
