Update README and documentation

--- a/docs/content/docs/index.mdx
+++ b/docs/content/docs/index.mdx
@@ -82,7 +82,9 @@ UVICORN_HOST=0.0.0.0
 UVICORN_PORT=8000
 ```
 
-### 4. Deploy the Application
+### 4. Deploy the Application in Docker
+
+Ensure Docker is running, then build and start the application:
 
 ```bash
 make deploy
