Add operation IDs to API endpoints and update generated docs

--- a/docs/content/docs/api/index.mdx
+++ b/docs/content/docs/api/index.mdx
@@ -13,7 +13,7 @@ Manage PDF documents with the following endpoints:
   <Card 
     title="POST /documents/upload"
     description="Upload and process PDF files asynchronously"
-    href="/docs/api/Upload_Document_documents_upload_post"
+    href="/docs/api/post_documents_upload"
   />
 </Cards>
 
@@ -23,7 +23,7 @@ Manage PDF documents with the following endpoints:
   <Card 
     title="GET /documents"
     description="List documents with metadata"
-    href="/docs/api/List_Documents_documents_get"
+    href="/docs/api/get_documents"
   />
 </Cards>
 
@@ -33,7 +33,7 @@ Manage PDF documents with the following endpoints:
   <Card 
     title="GET /documents/{id}/status"
     description="Check processing status of a document"
-    href="/docs/api/Get_Document_Status_documents__document_id__status_get"
+    href="/docs/api/get_documents_by_id_status"
   />
 </Cards>
 
@@ -43,7 +43,7 @@ Manage PDF documents with the following endpoints:
   <Card 
     title="DELETE /documents/{id}"
     description="Delete a document and its associated data"
-    href="/docs/api/Delete_Document_documents__document_id__delete"
+    href="/docs/api/delete_documents_by_id"
   />
 </Cards>
 
@@ -55,7 +55,7 @@ The Q&A system allows you to ask questions about the uploaded documents:
   <Card 
     title="POST /qa/ask"
     description="Ask questions about uploaded documents"
-    href="/docs/api/Ask_Question_qa_ask_post"
+    href="/docs/api/post_qa_ask"
   />
 </Cards>
 
@@ -65,7 +65,7 @@ The Q&A system allows you to ask questions about the uploaded documents:
   <Card 
     title="GET /qa/history"
     description="Get conversation history"
-    href="/docs/api/Get_QA_History_qa_history_get"
+    href="/docs/api/get_qa_history"
   />
 </Cards>
 
@@ -77,7 +77,7 @@ The feedback system allows users to provide ratings and comments on the Q&A resp
   <Card 
     title="POST /feedback"
     description="Submit feedback with ratings and optional comments"
-    href="/docs/api/Submit_Feedback_feedback_post"
+    href="/docs/api/post_feedback"
   />
 </Cards>
 
@@ -87,7 +87,7 @@ The feedback system allows users to provide ratings and comments on the Q&A resp
   <Card 
     title="GET /feedback"
     description="Get feedback history"
-    href="/docs/api/Get_Feedback_History_feedback_get"
+    href="/docs/api/get_feedback"
   />
 </Cards>
 
@@ -97,6 +97,6 @@ The feedback system allows users to provide ratings and comments on the Q&A resp
   <Card 
     title="DELETE /feedback/{session_id}"
     description="Delete feedback entries"
-    href="/docs/api/Delete_Feedback_feedback__session_id__delete"
+    href="/docs/api/delete_feedback_by_session_id"
   />
 </Cards>
