--- a/docs/content/docs/api/get_health_check.mdx
+++ b/docs/content/docs/api/get_health_check.mdx
@@ -15,4 +15,4 @@ _openapi:
 
 Health check endpoint to verify if the API is running
 
-<APIPage document={"http://localhost:8000/openapi.json"} operations={[{"path":"/","method":"get"}]} webhooks={[]} hasHead={false} />
+<APIPage document={"openapi.json"} operations={[{"path":"/","method":"get"}]} webhooks={[]} hasHead={false} />
