--- a/docs/content/docs/api/get_qa_history.mdx
+++ b/docs/content/docs/api/get_qa_history.mdx
@@ -15,4 +15,4 @@ _openapi:
 
 Get the history of question-answer pairs
 
-<APIPage document={"http://localhost:8000/openapi.json"} operations={[{"path":"/qa/history","method":"get"}]} webhooks={[]} hasHead={false} />
+<APIPage document={"openapi.json"} operations={[{"path":"/qa/history","method":"get"}]} webhooks={[]} hasHead={false} />
