--- a/docs/content/docs/api/post_documents_upload_sync.mdx
+++ b/docs/content/docs/api/post_documents_upload_sync.mdx
@@ -15,4 +15,4 @@ _openapi:
 
 Upload and process a document synchronously for debugging
 
-<APIPage document={"http://localhost:8000/openapi.json"} operations={[{"path":"/documents/upload-sync","method":"post"}]} webhooks={[]} hasHead={false} />
+<APIPage document={"openapi.json"} operations={[{"path":"/documents/upload-sync","method":"post"}]} webhooks={[]} hasHead={false} />
